--- a/css/header.css
+++ b/css/header.css
@@ -8,6 +8,7 @@ header {
     display: grid;
     width: 100vw;
     height: 100vh;
+    justify-content: center;
     /* background-image: url('../img/mobile.jpg'); */
 }
 
@@ -24,6 +25,7 @@ header {
 
 .main-nav__item {
     margin-right: 50px;
+    font-weight: bold;
 }
 
 .header-logo {
@@ -45,4 +47,14 @@ header {
     font-weight: bold;
     font-size: 3rem;
     color: var(--grey);
+}
+
+.btn {
+    width: 200px;
+    height: 50px;
+    color: white;
+    background-color: var(--red);
+    border: none;
+    box-shadow: 0 2px 7px var(--grey);
+
 }
